[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "backColliding"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -0.1 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "frontColliding"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0.1 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "leftColliding"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -0.1, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "rightColliding"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.1, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="PrismMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="Collisions" type="Spatial" parent="."]

[node name="RayCast_Forward" type="RayCast" parent="Collisions"]
enabled = true
cast_to = Vector3( 0, 0, -2 )

[node name="RayCast_Left" type="RayCast" parent="Collisions"]
enabled = true
cast_to = Vector3( -2, 0, 0 )

[node name="RayCast_Right" type="RayCast" parent="Collisions"]
enabled = true
cast_to = Vector3( 2, 0, 0 )

[node name="RayCast_Backward" type="RayCast" parent="Collisions"]
enabled = true
cast_to = Vector3( 0, 0, 2 )

[node name="Camera" type="Camera" parent="."]
fov = 105.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
visible = false
light_color = Color( 0.901961, 0.878431, 0.870588, 1 )

[node name="OmniLight" type="OmniLight" parent="."]
visible = false
light_color = Color( 0.901961, 0.878431, 0.870588, 1 )
light_energy = 1.5

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/backColliding = SubResource( 3 )
anims/frontColliding = SubResource( 2 )
anims/leftColliding = SubResource( 4 )
anims/rightColliding = SubResource( 5 )

[node name="UI" parent="." instance=ExtResource( 2 )]

[node name="RigidBody" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody"]
transform = Transform( 0.7, 0, 0, 0, -4.37114e-08, 0.1, 0, -1, -4.37114e-09, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )
